--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -4,7 +4,7 @@
     .container {
         width: 350px;
         margin: 0 auto;
-        padding-top: 200px;
+        padding-top: 6em;
         .generator {
             background: #23235b;
             border-radius: 3px;
